fix filter manager alignment for small width

--- a/editor_app/static/css/editors_panel.css
+++ b/editor_app/static/css/editors_panel.css
@@ -6,20 +6,17 @@
     height: auto;
     padding: 0 20px;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
     font-size: 18px;
     margin-bottom: 30px;
-}
-
-.filter_manager > * {
-    width: 45%;
 }
 
 .filter_manager form {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10%;
+    min-width: 330px;
 }
 
 .filter_manager form select {
@@ -46,9 +43,10 @@
     text-align: center;
     font-weight: bold;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex: 1;
 }
 
 .filter_manager .filters_applied p {
-    margin: 0;
+    margin: 0 0 0 25px;
 }
